--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,90 @@
-.vscode
-.idea
+##### C / C++
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj1
+*.ko
+*.obj
+*.elf
+
+# Compiled Dynamic libraries
+*.so
+*.so.*
+*.dylib
+*.dll
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+
+##### CMake
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+install_manifest.txt
+
+# Compiled binary
 bin/
+
+# "Default" build dirs
 build/
-cryptominisat/
+
+
+##### Visual Studio Code
+.vscode/
+.project
+.classpath
+
+
+##### JetBrains CLion
+.idea/
+
+
+##### Linux
+*~
+
+
+##### OSX
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must ends with two \r.
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+
+##### Windows
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
